[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
name = "cazy-parser"
version = "2.0.3"
description = "A way to extract specific information from CAZy"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
readme = "README.md"
packages = [{ include = "cazy_parser" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = ["cazy", "database", "datamining"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.27.1"
biopython = "^1.81"
progressbar2 = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"
hypothesis = "^6.75.1"

[tool.poetry.scripts]
cazy-parser = 'cazy_parser.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
